test/ui/tests/fail/class-async-fn-borrowed-self.rs
#[derive(Clone)]
struct Example;

#[neon::class]
impl Example {
    async fn method(&self) {}
}

fn main() {}
